--- a/src/app/views/surveys/survey-view/survey-view.component.html
+++ b/src/app/views/surveys/survey-view/survey-view.component.html
@@ -1,1 +1,4 @@
+
+<!-- Note that this component isn't currently in use; the Typescript controller is rendering this HTML directly.
+    We didn't want to get rid of this template in case it was needed again. -->
 <div name="surveyElement"></div>
