--- a/src/app/views/header/header.component.html
+++ b/src/app/views/header/header.component.html
@@ -44,16 +44,16 @@
     <span class="spacer"></span>
     <ul class="alignright">
         <li *ngIf="userIsAuthenticated && token.role !== 1 || userIsAuthenticated && token.role === 0">
-            <button mat-button routerLink="/profile" routerLinkActive="mat-accent">> {{loggedInUser.firstName}}
+            <button mat-button routerLink="/profile" routerLinkActive="mat-accent"> {{loggedInUser.firstName}}
                 {{loggedInUser.lastName}} </button>
         </li>
         <li *ngIf="userIsAuthenticated && token.role === 1">
-            <button mat-button routerLinkActive="mat-accent">> {{loggedInUser.firstName}}
+            <button mat-button routerLinkActive="mat-accent"> {{loggedInUser.username}}
                 {{loggedInUser.lastName}} </button>
         </li>
         <li *ngIf="userIsAuthenticated && token.role === 0">
             <button mat-button routerLink="/users"
-                routerLinkActive="mat-accent">> {{'app-header.users' | translate}} </button>
+                routerLinkActive="mat-accent"> {{'app-header.users' | translate}} </button>
         </li>
         <mat-divider [vertical]="true"></mat-divider>
         <li *ngIf="userIsAuthenticated">
