--- a/src/app/views/studies/available.component.html
+++ b/src/app/views/studies/available.component.html
@@ -136,7 +136,7 @@
                     </mat-form-field>
                     <mat-form-field>
                         <mat-label>{{'studies-components.type_edit' | translate}}</mat-label>
-                        <mat-select [(ngModel)]="model.type" (click)="model.type = $event.id"
+                        <mat-select [(ngModel)]="model.type" (click)="model.type"
                             [formControl]="studyTypeFormControl" [errorStateMatcher]="matcher">
                             <mat-option *ngFor="let type of studyTypes" [value]="type.id"
                                 (click)="initializeStudyType(type.id)">
@@ -166,7 +166,7 @@
                     </mat-form-field>
                     <mat-form-field>
                         <mat-label>{{'studies-components.gender' | translate}}</mat-label>
-                        <mat-select [(ngModel)]="model.sex" (click)="model.sex = +$event.id">
+                        <mat-select [(ngModel)]="model.sex" (click)="model.sex">
                             <mat-option *ngFor="let s of sex" [value]="s.id">
                                 {{selectedLanguage === 'en' ? s.nameEn : s.nameFr}}
                             </mat-option>
