--- a/src/app/views/studies/available.component.html
+++ b/src/app/views/studies/available.component.html
@@ -1,4 +1,4 @@
-<div *ngIf="displayStudy" style="padding-bottom: 3em">
+<div *ngIf="displayStudy && display" style="padding-bottom: 3em">
     <mat-card *ngIf="model.type === 0">
         <mat-card-title class="entry-card-title">{{model.title}}</mat-card-title>
         <mat-card-subtitle>{{studyTypes | findValue : model.type : selectedLanguage}}</mat-card-subtitle>
@@ -136,7 +136,7 @@
                     </mat-form-field>
                     <mat-form-field>
                         <mat-label>{{'studies-components.type_edit' | translate}}</mat-label>
-                        <mat-select [(ngModel)]="model.type" (click)="model.type = $event.id"
+                        <mat-select [(ngModel)]="model.type" (click)="model.type"
                             [formControl]="studyTypeFormControl" [errorStateMatcher]="matcher">
                             <mat-option *ngFor="let type of studyTypes" [value]="type.id"
                                 (click)="initializeStudyType(type.id)">
@@ -166,7 +166,7 @@
                     </mat-form-field>
                     <mat-form-field>
                         <mat-label>{{'studies-components.gender' | translate}}</mat-label>
-                        <mat-select [(ngModel)]="model.sex" (click)="model.sex = +$event.id">
+                        <mat-select [(ngModel)]="model.sex" (click)="model.sex">
                             <mat-option *ngFor="let s of sex" [value]="s.id">
                                 {{selectedLanguage === 'en' ? s.nameEn : s.nameFr}}
                             </mat-option>
@@ -215,12 +215,62 @@
         &nbsp;
     </div>
 
-    <div class="mat-elevation-z1">
+    <div *ngIf="display" class="mat-elevation-z1">
         <br>
         <table mat-table [dataSource]="listOfStudies" matSort>
             <ng-container matColumnDef="title">
                 <th mat-header-cell *matHeaderCellDef mat-sort-header> {{'studies-components.title' | translate}} </th>
-                <td mat-cell *matCellDef="let study"> {{study.title}} </td>
+                <td mat-cell *matCellDef="let study"><a routerLink="/study-page/{{study._id}}">{{study.title}}</a></td>
+            </ng-container>
+
+            <ng-container matColumnDef="type">
+                <th mat-header-cell *matHeaderCellDef mat-sort-header> {{'studies-components.type' | translate}} </th>
+                <td mat-cell *matCellDef="let study">{{studyTypes | findValue : study.type : selectedLanguage}}</td>
+            </ng-container>
+
+            <ng-container matColumnDef="researcher">
+                <th mat-header-cell *matHeaderCellDef mat-sort-header> {{'studies-components.researcher' | translate}}
+                </th>
+                <td mat-cell *matCellDef="let study">{{study.researcher}}</td>
+            </ng-container>
+
+            <ng-container matColumnDef="actions">
+                <th mat-header-cell *matHeaderCellDef> {{'studies-components.action' | translate}} </th>
+                <td mat-cell *matCellDef="let study">
+                    <button mat-icon-button [matMenuTriggerFor]="menu">
+                        <mat-icon>more_vert</mat-icon>
+                    </button>
+                    <mat-menu #menu="matMenu">
+                        <button mat-menu-item (click)="editEntry(study)"
+                            *ngIf="loggedInUser.role === 0 || loggedInUser.role === 1">
+                            <mat-icon>edit</mat-icon>
+                            <span>{{'studies-components.action_edit' | translate}}</span>
+                        </button>
+                        <button mat-menu-item (click)="delete(study)"
+                            *ngIf="loggedInUser.role === 0 || loggedInUser.role === 1">
+                            <mat-icon>delete</mat-icon>
+                            <span>{{'studies-components.action_delete' | translate}}</span>
+                        </button>
+                        <button mat-menu-item (click)="loadEntry(study)"
+                            *ngIf="loggedInUser.role === 0 || loggedInUser.role === 2">
+                            <mat-icon>edit</mat-icon>
+                            <span>{{'studies-components.action_start' | translate}}</span>
+                        </button>
+                    </mat-menu>
+                </td>
+            </ng-container>
+
+            <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+            <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+        </table>
+        <mat-paginator [pageSizeOptions]="[5, 10, 20]" showFirstLastButtons></mat-paginator>
+    </div>
+    <div *ngIf="display" class="mat-elevation-z1">
+        <br>
+        <table mat-table [dataSource]="newStudyList" matSort>
+            <ng-container matColumnDef="title">
+                <th mat-header-cell *matHeaderCellDef mat-sort-header> {{'studies-components.title' | translate}} </th>
+                <td mat-cell *matCellDef="let study"><a routerLink="/study-page/{{study._id}}">{{study.title}}</a></td>
             </ng-container>
 
             <ng-container matColumnDef="type">
@@ -266,4 +316,6 @@
         <mat-paginator [pageSizeOptions]="[5, 10, 20]" showFirstLastButtons></mat-paginator>
     </div>
 </div>
-<app-study-card></app-study-card>
+
+<!-- This element holds the grid list that contains all of the study cards -->
+<app-study-card [studyTypes]="studyTypes" [listOfStudies]="newStudyList"></app-study-card>
