--- a/src/app/views/profile/profile.component.html
+++ b/src/app/views/profile/profile.component.html
@@ -1,4 +1,3 @@
-
 <div *ngIf="entryFlag || editEntryFlag">
     <br>
     <mat-card>
@@ -20,7 +19,7 @@
     &nbsp;
 </div>
 
-<mat-card>
+<mat-card *ngIf="loggedInUser.role !== 1">
     <mat-card-title>{{loggedInUser.firstName}} {{loggedInUser.lastName}}</mat-card-title>
     <div class="d-flex justify-content-between">
         <mat-card-subtitle>{{ roles | findValue : loggedInUser.role : selectedLanguage}}</mat-card-subtitle>
@@ -30,110 +29,107 @@
             <span>{{'studies-components.action_edit' | translate}}</span>
         </button>
     </div>
-    <mat-card-content *ngIf="loggedInUser.role !== 1">
-        <mat-accordion multi="true">
+    <ul class="nav nav-tabs" id="myTab" role="tablist">
+        <li class="nav-item">
+            <a style="color: black;" class="nav-link active" id="bio-tab" data-toggle="tab" href="#bio" role="tab"
+                aria-controls="bio" aria-selected="true">
+                {{'profile-components.biological_info' | translate}}
+            </a>
+        </li>
+        <li class="nav-item">
+            <a style="color: black;" class="nav-link" id="geo-tab" data-toggle="tab" href="#geo" role="tab"
+                aria-controls="geo" aria-selected="false">{{'profile-components.geographical_info' | translate}}</a>
+        </li>
+        <li class="nav-item">
+            <a style="color: black;" class="nav-link" id="general-tab" data-toggle="tab" href="#general" role="tab"
+                aria-controls="general" aria-selected="false">General Information</a>
+        </li>
+        <li class="nav-item">
+            <a style="color: black;" class="nav-link" id="research-tab" data-toggle="tab" href="#research" role="tab"
+                aria-controls="research" aria-selected="false">{{'profile-components.research_info' | translate}}</a>
+        </li>
+    </ul>
+    <div class="tab-content mb-4" id="myTabContent" style="margin-left: 20px; margin-top: 25px;">
+        <div class="tab-pane fade show active" id="bio" role="tabpanel" aria-labelledby="bio-tab">
+            <div class="row">
+                <div class="col-md-1">
+                    <mat-label class="label-name">{{'profile-components.age' | translate}}:</mat-label>
 
-            <mat-expansion-panel [expanded]="true">
-                <mat-expansion-panel-header>
-                    <h3>{{'profile-components.biological_info' | translate}}</h3>
-                </mat-expansion-panel-header>
-                <mat-divider class="mb-3" [inset]="true"></mat-divider>
-                <div class="row">
-                    <div class="col-md-1">
-                        <mat-label class="label-name">{{'profile-components.age' | translate}}:</mat-label>
-
-                    </div>
-                    <div class="col-md-1">
-                        <mat-label>{{loggedInUser.age ? loggedInUser.age : 'N/A'}}</mat-label>
-                    </div>
                 </div>
-                &nbsp;
-                <div class="row">
-                    <div class="col-md-1">
-                        <mat-label class="label-name">{{'profile-components.gender' | translate}}:</mat-label>
-                    </div>
-                    <div class="col-md-1">
-                        <mat-label>{{ sex | findValue : loggedInUser.sex : selectedLanguage}}</mat-label>
-                    </div>
+                <div class="col-md-1">
+                    <mat-label>{{loggedInUser.age ? loggedInUser.age : 'N/A'}}</mat-label>
                 </div>
-                &nbsp;
-                <div class="row">
-                    <div class="col-md-1">
-                        <mat-label class="label-name">Ethnicity:</mat-label>
-                    </div>
-                    <div class="col-md-1">
-                        <mat-label>Asian</mat-label>
-                    </div>
+            </div>
+            &nbsp;
+            <div class="row">
+                <div class="col-md-1">
+                    <mat-label class="label-name">{{'profile-components.gender' | translate}}:</mat-label>
                 </div>
-                &nbsp;
-                <div class="row">
-                    <div class="col-md-1">
-                        <mat-label class="label-name">Height:</mat-label>
-                    </div>
-                    <div class="col-md-1">
-                        <mat-label>200cm</mat-label>
-                    </div>
+                <div class="col-md-1">
+                    <mat-label>{{ sex | findValue : loggedInUser.sex : selectedLanguage}}</mat-label>
                 </div>
-                &nbsp;
-                <div class="row">
-                    <div class="col-md-1">
-                        <mat-label class="label-name">Weight:</mat-label>
-                    </div>
-                    <div class="col-md-1">
-                        <mat-label>140 lb</mat-label>
-                    </div>
+            </div>
+            &nbsp;
+            <div class="row">
+                <div class="col-md-1">
+                    <mat-label class="label-name">Ethnicity:</mat-label>
                 </div>
-            </mat-expansion-panel>
-
-            <mat-expansion-panel [expanded]="true">
-                <mat-expansion-panel-header>
-                    <h3>{{'profile-components.geographical_info' | translate}}</h3>
-                </mat-expansion-panel-header>
-                <mat-divider class="mb-3" [inset]="true"></mat-divider>
-                <div fxLayout="row" fxLayoutGap="1em">
-                    <mat-label class="label-name">{{'profile-components.address' | translate}}:</mat-label>
-                    <mat-label>{{loggedInUser.address}}</mat-label>
+                <div class="col-md-1">
+                    <mat-label>Asian</mat-label>
                 </div>
-                <div fxLayout="row" fxLayoutAlign="center">
-                    <img src="{{getStaticMap(loggedInUser.address)}}" />
+            </div>
+            &nbsp;
+            <div class="row">
+                <div class="col-md-1">
+                    <mat-label class="label-name">Height:</mat-label>
                 </div>
-            </mat-expansion-panel>
-
-            <mat-expansion-panel [expanded]="true">
-                <mat-divider class="mb-3" [inset]="true"></mat-divider>
-                <mat-expansion-panel-header>
-                    <h3>General Information</h3>
-                </mat-expansion-panel-header>
-                <div fxLayout="row" fxLayoutGap="1em">
-                    <mat-label class="label-name">Occupation:</mat-label>
-                    <mat-label>Computer Programmer</mat-label>
+                <div class="col-md-1">
+                    <mat-label>200cm</mat-label>
                 </div>
-                &nbsp;
-                <div fxLayout="row" fxLayoutGap="1em">
-                    <mat-label class="label-name">Has kids:</mat-label>
-                    <mat-label>Yes</mat-label>
+            </div>
+            &nbsp;
+            <div class="row">
+                <div class="col-md-1">
+                    <mat-label class="label-name">Weight:</mat-label>
                 </div>
-                &nbsp;
-                <div fxLayout="row" fxLayoutGap="1em">
-                    <mat-label class="label-name">Smoke:</mat-label>
-                    <mat-label>No</mat-label>
+                <div class="col-md-1">
+                    <mat-label>140 lb</mat-label>
                 </div>
-                &nbsp;
-                <div fxLayout="row" fxLayoutGap="1em">
-                    <mat-label class="label-name">Drink:</mat-label>
-                    <mat-label>No</mat-label>
-                </div>
-            </mat-expansion-panel>
-
-            <mat-expansion-panel [expanded]="true">
-                <mat-expansion-panel-header>
-                    <h3>{{'profile-components.research_info' | translate}}</h3>
-                </mat-expansion-panel-header>
-                <mat-divider class="mb-3" [inset]="true"></mat-divider>
-                <mat-label>{{'profile-components.participated_in' | translate}} {{loggedInUser.studies.length}}
-                    {{'profile-components.studies' | translate}}.</mat-label>
-            </mat-expansion-panel>
-
-        </mat-accordion>
-    </mat-card-content>
+            </div>
+        </div>
+        <div class="tab-pane fade" id="geo" role="tabpanel" aria-labelledby="geo-tab">
+            <div fxLayout="row" fxLayoutGap="1em">
+                <mat-label class="label-name">{{'profile-components.address' | translate}}:</mat-label>
+                <mat-label>{{loggedInUser.address}}</mat-label>
+            </div>
+            <div fxLayout="row" fxLayoutAlign="center">
+                <img src="{{getStaticMap(loggedInUser.address)}}" />
+            </div>
+        </div>
+        <div class="tab-pane fade" id="general" role="tabpanel" aria-labelledby="general-tab">
+            <div fxLayout="row" fxLayoutGap="1em">
+                <mat-label class="label-name">Occupation:</mat-label>
+                <mat-label>Computer Programmer</mat-label>
+            </div>
+            &nbsp;
+            <div fxLayout="row" fxLayoutGap="1em">
+                <mat-label class="label-name">Has kids:</mat-label>
+                <mat-label>Yes</mat-label>
+            </div>
+            &nbsp;
+            <div fxLayout="row" fxLayoutGap="1em">
+                <mat-label class="label-name">Smoke:</mat-label>
+                <mat-label>No</mat-label>
+            </div>
+            &nbsp;
+            <div fxLayout="row" fxLayoutGap="1em">
+                <mat-label class="label-name">Drink:</mat-label>
+                <mat-label>No</mat-label>
+            </div>
+        </div>
+        <div class="tab-pane fade" id="research" role="tabpanel" aria-labelledby="research-tab">
+            <mat-label>{{'profile-components.participated_in' | translate}} {{loggedInUser.studies.length}}
+                {{'profile-components.studies' | translate}}.</mat-label>
+        </div>
+    </div>
 </mat-card>
