--- a/src/app/views/study-card/study-card.component.css
+++ b/src/app/views/study-card/study-card.component.css
@@ -3,6 +3,8 @@
     transition: 0.3s;
     border-radius: 5px;
     padding: 16px;
+    height: 100px;
+
 }
 
 .study-card:hover {
@@ -12,9 +14,6 @@
 .container {
     padding: 2px 16px;
 }
-
-
-
 
 
 
@@ -60,10 +59,11 @@
     background-position: center;
     background-repeat: no-repeat;
     width: 100%;
-    height: 235px;
+    height: 50%;
+    min-height: 50%;
+    max-height: 50%;
     border-top-left-radius: 12px;
     border-top-right-radius: 12px;
-
 }
 
 .card__info-hover {
@@ -96,6 +96,8 @@
     overflow: hidden;
     box-shadow: 0px 13px 10px -7px rgba(0, 0, 0, 0.1);
     margin-top: 40px;
+    height: 320px;
+    width: 300px;
 }
 
 .card:hover {
@@ -150,4 +152,5 @@
 
 .card:hover .card__info-hover {
     opacity: 1;
+    padding: 20px;
 }
