--- a/src/app/views/studies/available.component.html
+++ b/src/app/views/studies/available.component.html
@@ -1,109 +1,4 @@
-<div *ngIf="displayStudy && display" style="padding-bottom: 3em">
-    <mat-card *ngIf="model.type === 0">
-        <mat-card-title class="entry-card-title">{{model.title}}</mat-card-title>
-        <mat-card-subtitle>{{studyTypes | findValue : model.type : selectedLanguage}}</mat-card-subtitle>
-        <mat-card>
-            <mat-card-subtitle><strong>{{'studies-components.creation_date' | translate}}:</strong>
-                {{ model.creationDate | date: 'dd/MM/yyyy' }}
-            </mat-card-subtitle>
-            <mat-card-subtitle><strong>{{'studies-components.author' | translate}}:</strong> {{ model.researcher }}
-            </mat-card-subtitle>
-        </mat-card>
-        <mat-card-content>
-            <div class="qa" *ngFor="let question of model.questions; let i = index">
-                <div fxLayout="row" fxLayoutGap="1em">
-                    <label><strong>{{'studies-components.question' | translate}} {{i + 1}}:</strong></label>
-                    <label>{{ question.question }}</label>
-                </div>
-                &nbsp;
-                <mat-radio-group fxLayout="row" fxLayoutAlign="space-evenly" (change)="question.answer = +$event.value">
-                    <mat-radio-button value="1">{{'studies-components.stdisagree' | translate}}</mat-radio-button>
-                    <mat-radio-button value="2">{{'studies-components.disagree' | translate}}</mat-radio-button>
-                    <mat-radio-button value="3">{{'studies-components.neutral' | translate}}</mat-radio-button>
-                    <mat-radio-button value="4">{{'studies-components.agree' | translate}}</mat-radio-button>
-                    <mat-radio-button value="5">{{'studies-components.stagree' | translate}}</mat-radio-button>
-                </mat-radio-group>
-            </div>
-            <mat-form-field>
-                <mat-label>{{'studies-components.completion_status' | translate}}:</mat-label>
-                <mat-select [(ngModel)]="model.status" (click)="model.status = $event.id">
-                    <mat-option *ngFor="let status of studyStatus" [value]="status.id">
-                        {{selectedLanguage === 'en' ? status.nameEn : status.nameFr}}
-                    </mat-option>
-                </mat-select>
-            </mat-form-field>
-        </mat-card-content>
-        <mat-divider [inset]="true"></mat-divider>
-        <mat-card-actions align="end">
-            <button mat-button (click)="submitStudy()">{{'studies-components.submit' | translate}}</button>
-            <button mat-button (click)="close()">{{'studies-components.close' | translate}}</button>
-        </mat-card-actions>
-    </mat-card>
-    <mat-card *ngIf="model.type === 1">
-        <mat-card-title class="entry-card-title">{{model.title}}</mat-card-title>
-        <mat-card-subtitle>{{studyTypes | findValue : model.type : selectedLanguage}}</mat-card-subtitle>
-        <mat-card>
-            <mat-card-subtitle><strong>{{'studies-components.creation_date' | translate}}:</strong>
-                {{ model.creationDate | date: 'dd/MM/yyyy' }}
-            </mat-card-subtitle>
-            <mat-card-subtitle><strong>{{'studies-components.author' | translate}}:</strong> {{ model.researcher }}
-            </mat-card-subtitle>
-            <mat-card-subtitle><strong>{{'studies-components.description' | translate}}: </strong>
-                {{ model.description ? model.description : 'N/A' }}</mat-card-subtitle>
-        </mat-card>
-        &nbsp;
-        &nbsp;
-        <mat-divider [inset]="true"></mat-divider>
-        <mat-card-actions align="end">
-            <button mat-button (click)="submitStudy()">{{'studies-components.action_start' | translate}}</button>
-            <button mat-button (click)="close()">{{'studies-components.close' | translate}}</button>
-        </mat-card-actions>
-    </mat-card>
-    <mat-card *ngIf="model.type === 2">
-        <mat-card-title class="entry-card-title">{{model.title}}</mat-card-title>
-        <mat-card-subtitle>{{studyTypes | findValue : model.type : selectedLanguage}}</mat-card-subtitle>
-        <mat-card>
-            <mat-card-subtitle><strong>{{'studies-components.creation_date' | translate}}:</strong>
-                {{ model.creationDate | date: 'dd/MM/yyyy' }}
-            </mat-card-subtitle>
-            <mat-card-subtitle><strong>{{'studies-components.author' | translate}}:</strong> {{ model.researcher }}
-            </mat-card-subtitle>
-        </mat-card>
-        <mat-card-content>
-            <div class="qa" *ngFor="let entry of model.entries; let i = index">
-                <mat-form-field>
-                    <input matInput [matDatepicker]="picker" [(ngModel)]="entry.date"
-                        placeholder="{{'studies-components.date_choose' | translate}}">
-                    <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
-                    <mat-datepicker #picker></mat-datepicker>
-                </mat-form-field>
-                <mat-form-field>
-                    <textarea matInput placeholder="{{'studies-components.entry' | translate}}"
-                        [(ngModel)]="entry.entry"></textarea>
-                </mat-form-field>
-            </div>
-            <div fxLayout="row" fxLayoutAlign="center center">
-                <button mat-icon-button (click)="addDiaryEntry()">
-                    <mat-icon>add</mat-icon>
-                </button>
-            </div>
-            <mat-form-field>
-                <mat-label>{{'studies-components.completion_status' | translate}}:</mat-label>
-                <mat-select [(ngModel)]="model.status" (click)="model.status = $event.id">
-                    <mat-option *ngFor="let status of studyStatus" [value]="status.id">
-                        {{selectedLanguage === 'en' ? status.nameEn : status.nameFr}}
-                    </mat-option>
-                </mat-select>
-            </mat-form-field>
-        </mat-card-content>
-        <mat-divider [inset]="true"></mat-divider>
-        <mat-card-actions align="end">
-            <button mat-button (click)="submitStudy()">{{'studies-components.submit' | translate}}</button>
-            <button mat-button (click)="close()">{{'studies-components.close' | translate}}</button>
-        </mat-card-actions>
-    </mat-card>
-</div>
-
+<!-- This DIV represents the search bar and Add button -->
 <div *ngIf="!displayStudy">
     <div class="input-group md-form form-sm form-1 pl-0">
         <div class="input-group-prepend">
@@ -118,6 +13,7 @@
             (click)="addEntry()">{{'users-components.add_button' | translate}}</button>
     </div>
 
+    <!-- This DIV represents the form for creating a study -->
     <div *ngIf="entryFlag || editEntryFlag">
         <br>
         <mat-card>
@@ -136,8 +32,8 @@
                     </mat-form-field>
                     <mat-form-field>
                         <mat-label>{{'studies-components.type_edit' | translate}}</mat-label>
-                        <mat-select [(ngModel)]="model.type" (click)="model.type"
-                            [formControl]="studyTypeFormControl" [errorStateMatcher]="matcher">
+                        <mat-select [(ngModel)]="model.type" (click)="model.type" [formControl]="studyTypeFormControl"
+                            [errorStateMatcher]="matcher">
                             <mat-option *ngFor="let type of studyTypes" [value]="type.id"
                                 (click)="initializeStudyType(type.id)">
                                 {{selectedLanguage === 'en' ? type.nameEn : type.nameFr}}
@@ -173,40 +69,43 @@
                         </mat-select>
                     </mat-form-field>
                 </div>
-                <div *ngIf="model.type===0">
-                    <div *ngFor="let question of model.questions; let i = index" fxLayout="row"
-                        fxLayoutAlign="center center">
+
+                <!-- Everything inside this DIV is also considered to be deprecated, but kept for compatibility reasons -->
+                <div *ngIf="display">
+                    <div *ngIf="model.type===0">
+                        <div *ngFor="let question of model.questions; let i = index" fxLayout="row"
+                            fxLayoutAlign="center center">
+                            <mat-form-field>
+                                <input matInput placeholder="{{'studies-components.question' | translate}} {{i + 1}}"
+                                    [(ngModel)]="question.question">
+                            </mat-form-field>
+                            <button mat-icon-button (click)="removeQuestion(i)">
+                                <mat-icon>clear</mat-icon>
+                            </button>
+                        </div>
+                        <div fxLayout="row" fxLayoutAlign="center center">
+                            <button mat-icon-button (click)="addQuestion()">
+                                <mat-icon>add</mat-icon>
+                            </button>
+                        </div>
+                    </div>
+                    <div *ngIf="model.type===1">
                         <mat-form-field>
-                            <input matInput placeholder="{{'studies-components.question' | translate}} {{i + 1}}"
-                                [(ngModel)]="question.question">
+                            <textarea matInput placeholder="{{'studies-components.description' | translate}}"
+                                [(ngModel)]="model.description"></textarea>
                         </mat-form-field>
-                        <button mat-icon-button (click)="removeQuestion(i)">
-                            <mat-icon>clear</mat-icon>
-                        </button>
                     </div>
-                    <div fxLayout="row" fxLayoutAlign="center center">
-                        <button mat-icon-button (click)="addQuestion()">
-                            <mat-icon>add</mat-icon>
-                        </button>
+                    <div *ngIf="model.type===2">
+                        <mat-form-field>
+                            <textarea matInput placeholder="{{'studies-components.description' | translate}}"
+                                [(ngModel)]="model.description"></textarea>
+                        </mat-form-field>
                     </div>
                 </div>
-                <div *ngIf="model.type===1">
-                    <mat-form-field>
-                        <textarea matInput placeholder="{{'studies-components.description' | translate}}"
-                            [(ngModel)]="model.description"></textarea>
-                    </mat-form-field>
-                </div>
-                <div *ngIf="model.type===2">
-                    <mat-form-field>
-                        <textarea matInput placeholder="{{'studies-components.description' | translate}}"
-                            [(ngModel)]="model.description"></textarea>
-                    </mat-form-field>
-                </div>
+
             </mat-card-content>
             <mat-divider [inset]="true"></mat-divider>
             <mat-card-actions align="end">
-                <button mat-button (click)="edit()"
-                    *ngIf="editEntryFlag">{{'studies-components.update' | translate}}</button>
                 <button mat-button [disabled]="!studyValid()" (click)="create()"
                     *ngIf="!editEntryFlag">{{'studies-components.submit' | translate}}</button>
                 <button mat-button (click)="close()">{{'studies-components.close' | translate}}</button>
@@ -214,108 +113,6 @@
         </mat-card>
         &nbsp;
     </div>
-
-    <div *ngIf="display" class="mat-elevation-z1">
-        <br>
-        <table mat-table [dataSource]="listOfStudies" matSort>
-            <ng-container matColumnDef="title">
-                <th mat-header-cell *matHeaderCellDef mat-sort-header> {{'studies-components.title' | translate}} </th>
-                <td mat-cell *matCellDef="let study"><a routerLink="/study-page/{{study._id}}">{{study.title}}</a></td>
-            </ng-container>
-
-            <ng-container matColumnDef="type">
-                <th mat-header-cell *matHeaderCellDef mat-sort-header> {{'studies-components.type' | translate}} </th>
-                <td mat-cell *matCellDef="let study">{{studyTypes | findValue : study.type : selectedLanguage}}</td>
-            </ng-container>
-
-            <ng-container matColumnDef="researcher">
-                <th mat-header-cell *matHeaderCellDef mat-sort-header> {{'studies-components.researcher' | translate}}
-                </th>
-                <td mat-cell *matCellDef="let study">{{study.researcher}}</td>
-            </ng-container>
-
-            <ng-container matColumnDef="actions">
-                <th mat-header-cell *matHeaderCellDef> {{'studies-components.action' | translate}} </th>
-                <td mat-cell *matCellDef="let study">
-                    <button mat-icon-button [matMenuTriggerFor]="menu">
-                        <mat-icon>more_vert</mat-icon>
-                    </button>
-                    <mat-menu #menu="matMenu">
-                        <button mat-menu-item (click)="editEntry(study)"
-                            *ngIf="loggedInUser.role === 0 || loggedInUser.role === 1">
-                            <mat-icon>edit</mat-icon>
-                            <span>{{'studies-components.action_edit' | translate}}</span>
-                        </button>
-                        <button mat-menu-item (click)="delete(study)"
-                            *ngIf="loggedInUser.role === 0 || loggedInUser.role === 1">
-                            <mat-icon>delete</mat-icon>
-                            <span>{{'studies-components.action_delete' | translate}}</span>
-                        </button>
-                        <button mat-menu-item (click)="loadEntry(study)"
-                            *ngIf="loggedInUser.role === 0 || loggedInUser.role === 2">
-                            <mat-icon>edit</mat-icon>
-                            <span>{{'studies-components.action_start' | translate}}</span>
-                        </button>
-                    </mat-menu>
-                </td>
-            </ng-container>
-
-            <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-            <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-        </table>
-        <mat-paginator [pageSizeOptions]="[5, 10, 20]" showFirstLastButtons></mat-paginator>
-    </div>
-    <div *ngIf="display" class="mat-elevation-z1">
-        <br>
-        <table mat-table [dataSource]="newStudyList" matSort>
-            <ng-container matColumnDef="title">
-                <th mat-header-cell *matHeaderCellDef mat-sort-header> {{'studies-components.title' | translate}} </th>
-                <td mat-cell *matCellDef="let study"><a routerLink="/study-page/{{study._id}}">{{study.title}}</a></td>
-            </ng-container>
-
-            <ng-container matColumnDef="type">
-                <th mat-header-cell *matHeaderCellDef mat-sort-header> {{'studies-components.type' | translate}} </th>
-                <td mat-cell *matCellDef="let study">{{studyTypes | findValue : study.type : selectedLanguage}}</td>
-            </ng-container>
-
-            <ng-container matColumnDef="researcher">
-                <th mat-header-cell *matHeaderCellDef mat-sort-header> {{'studies-components.researcher' | translate}}
-                </th>
-                <td mat-cell *matCellDef="let study">{{study.researcher}}</td>
-            </ng-container>
-
-            <ng-container matColumnDef="actions">
-                <th mat-header-cell *matHeaderCellDef> {{'studies-components.action' | translate}} </th>
-                <td mat-cell *matCellDef="let study">
-                    <button mat-icon-button [matMenuTriggerFor]="menu">
-                        <mat-icon>more_vert</mat-icon>
-                    </button>
-                    <mat-menu #menu="matMenu">
-                        <button mat-menu-item (click)="editEntry(study)"
-                            *ngIf="loggedInUser.role === 0 || loggedInUser.role === 1">
-                            <mat-icon>edit</mat-icon>
-                            <span>{{'studies-components.action_edit' | translate}}</span>
-                        </button>
-                        <button mat-menu-item (click)="delete(study)"
-                            *ngIf="loggedInUser.role === 0 || loggedInUser.role === 1">
-                            <mat-icon>delete</mat-icon>
-                            <span>{{'studies-components.action_delete' | translate}}</span>
-                        </button>
-                        <button mat-menu-item (click)="loadEntry(study)"
-                            *ngIf="loggedInUser.role === 0 || loggedInUser.role === 2">
-                            <mat-icon>edit</mat-icon>
-                            <span>{{'studies-components.action_start' | translate}}</span>
-                        </button>
-                    </mat-menu>
-                </td>
-            </ng-container>
-
-            <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-            <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-        </table>
-        <mat-paginator [pageSizeOptions]="[5, 10, 20]" showFirstLastButtons></mat-paginator>
-    </div>
-</div>
 
 <!-- This element holds the grid list that contains all of the study cards -->
 <app-study-card [studyTypes]="studyTypes" [listOfStudies]="newStudyList"></app-study-card>
