Fixed more merge bugs

--- a/src/app/views/age-gate/age-gate.component.html
+++ b/src/app/views/age-gate/age-gate.component.html
@@ -7,7 +7,7 @@ https://agechecker.net/age-gate/create -->
   <div style="margin-bottom: 40px;">
     <h1 style="margin-top: 50px;" class="text-center">Welcome to Link The Masses</h1>
     <h2 class="text-center">Only users 18 years of age or older are permitted</h2>
-    <p class="text-center">Click upon Login if so, elsewise you may not pro.</p>
+    <p class="text-center">Click upon Login if so, elsewise you may not proceed.</p>
 
 
 
