--- a/src/app/views/age-gate/age-gate.component.html
+++ b/src/app/views/age-gate/age-gate.component.html
@@ -8,7 +8,7 @@ https://agechecker.net/age-gate/create -->
 
 <h1 fxLayout="row" fxLayoutAlign="center center">Welcome to LinkTheMasses</h1>
 <h2 fxLayout="row" fxLayoutAlign="center center">Only users 18 years of age or older are permitted</h2>
-<p fxLayout="row" fxLayoutAlign="center center">Click upon Login if so, elsewise you may not pro.</p>
+<p fxLayout="row" fxLayoutAlign="center center">Click upon Login if so, elsewise you may not proceed.</p>
 
 
 
