--- a/src/app/views/footer/footer.component.html
+++ b/src/app/views/footer/footer.component.html
@@ -5,22 +5,22 @@
     <ul>
         <li>
             <a target="_blank" href="https://www.google.com">
-                <img src="../../../assets/images/google-plus.png"></a>
+                <img src="../../../assets/images/gp.png"></a>
         </li>
         &nbsp;
         <li>
             <a target="_blank" href="https://www.facebook.com">
-                <img src="../../../assets/images/facebook.png"></a>
+                <img src="../../../assets/images/fb2.png"></a>
         </li>
         &nbsp;
         <li>
             <a target="_blank" href="https://www.twitter.com">
-                <img src="../../../assets/images/twitter.png"></a>
+                <img src="../../../assets/images/tw2.png"></a>
         </li>
         &nbsp;
         <li>
             <a target="_blank" href="https://www.linkedin.com">
-                <img src="../../../assets/images/linkedin.png"></a>
+                <img src="../../../assets/images/ld.png"></a>
         </li>
     </ul>
 </mat-toolbar>
