--- a/src/app/views/study-page/study-page.component.html
+++ b/src/app/views/study-page/study-page.component.html
@@ -14,12 +14,12 @@
     <!-- This DIV will contain all buttons specific to the researcher's view of the page -->
     <div *ngIf="loggedInUser.role === 1">
 
-      <button mat-button color="primary" class="sidebar-button" (click)="edit()" *ngIf="!isSurveyActive && !editable"
+      <button mat-button class="sidebar-button btn-gradient green large" (click)="edit()" *ngIf="!isSurveyActive && !editable"
         matTooltip="Allows you to edit your study">Edit</button>
       <mat-divider></mat-divider>
 
       <!-- These buttons are only shown when the survey-maker is active, which means that the survey is being edited -->
-      <button mat-button color="primary" class="sidebar-button" (click)="hideEdit()" *ngIf="editable"
+      <button mat-button class="sidebar-button btn-gradient green large" (click)="hideEdit()" *ngIf="editable"
         matTooltip="Saves your changes and takes you back to the main page">
 
         Finish Editing</button>
@@ -42,7 +42,7 @@
 
           <!-- TODO: Implement functionality for deleting a survey, which effectively means changing the study type -->
 
-          <button mat-button color="warn" class="sidebar-button"
+          <button mat-button class="sidebar-button btn-gradient red large"
             matTooltip="Deletes the survey altogether, allowing you to switch to a different type of study"
             (click)="delete()" routerLink="/available-studies">Delete
             Study</button>
@@ -73,7 +73,7 @@
       <!-- This DIV is only rendered if the study is of type diary -->
       <div *ngIf="type === 2">
         <div *ngIf="editable">
-          <button mat-button color="warn" class="sidebar-button"
+          <button mat-button class="sidebar-button btn-gradient red large"
             matTooltip="Deletes this diary study altogether, allowing you to switch to a different type of study"
             (click)="delete()" routerLink="/available-studies">Delete Study</button>
 
@@ -86,19 +86,19 @@
     <!-- This DIV will handle all buttons for the Participant's functions -->
     <div *ngIf="loggedInUser.role === 2">
       <!-- button for Survey Component  -->
-      <button mat-button color="primary" class="sidebar-button" *ngIf="type === 0 && !isSurveyActive"
+      <button mat-button class="sidebar-button btn-gradient green large" *ngIf="type === 0 && !isSurveyActive"
         (click)="startSurvey()">Start Survey</button>
       <!-- button for Diary Component  -->
-      <button mat-button color="primary" class="sidebar-button" *ngIf="type === 2 && !isSurveyActive"
+      <button mat-button class="sidebar-button btn-gradient green large" *ngIf="type === 2 && !isSurveyActive"
         (click)="startSurvey()">Log Diary</button>
-      <button mat-button color="primary" class="sidebar-button" *ngIf="type === 2 && isSurveyActive"
+      <button mat-button class="sidebar-button btn-gradient green large" *ngIf="type === 2 && isSurveyActive"
         (click)="stopSurvey()">Submit</button>
       <mat-divider></mat-divider>
     </div>
 
     <!-- This button takes you back to the study list -->
 
-    <button mat-button color="primary" class="sidebar-button" routerLink="/available-studies"
+    <button mat-button class="sidebar-button btn-gradient blue large" routerLink="/available-studies"
       matTooltip="Return to the study list">Back</button>
     <mat-divider></mat-divider>
   </mat-card>
